Cycles Crash on deleting/hiding all mesh objects with HIP RT (Experimental) #112983
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#112983
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 10 Professional (64 bit)
Operating system version: 10.0.19045 Build 19045
Graphics card: AMD Radeon RX 6700 XT
GPU Driver version: 23.20.11.04-230921a-396203C-AMD-Software-Adrenalin-Edition
CPU: AMD Ryzen 7 3800X 8-Core Processor
RAM: 32 GB
Blender Version
Broken: 3.6 and onward (including the 27/09/2023 Blender 3.6.5 daily build version)
Worked: Technically 3.5.1 due to it not having a "HIP RT (Experimental)"
Also surprisingly works on Blender 4.0 Beta.
Short description of error
Cycles with "GPU Compute" and enabled "HIP RT (Experimental)" crashes when scene has no mesh objects or if they are hidden (other objects don't seem to affect it).
Exact steps for others to reproduce the error
Thank you!
Hi @Philipp-Kosarev , it would be helpful if you can give us the crash log, see manual for instructions.
Since 4.0 is working, I'd suggest simply go for the newer version. This sounds like a small corner case that might already be fixed, but I'm not sure whether there is any specific commit that's gonna be backported.
Hello,
I've set temp directory to Desktop, but it only generates an empty folder.
Am I misunderstanding how the crash report works?
Please open Blender's installation directory and double click on the
blender_debug_gpu.cmd
. This will start Blender in debug mode and create log files. Try to reproduce theerror again. Once it crashes or you close Blender manually the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them
to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in
C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt
(or simply type%TEMP%
into the path bar of the Windows Explorer).Thank you.
Starting Blender with
blender_debug_gpu.cmd
did generate crash logs.There wasn't a
[project name].crash.txt
in the Temp folder. Attached is a screenshot showing all .txt files in it.Thanks. Not really able spot crash related info in
blender_debug_output.txt
Could you check whether situation has improved in recent 4.0/4.1 builds?: https://builder.blender.org/download/daily/
Looks like the bug persists in
blender-4.0.0-beta+v40.c7a6ede99690-windows.amd64-release
andblender-4.1.0-alpha+main.65a6350250c2-windows.amd64-release
. When I opened the issue it seemed to work on 4.0.0, could be the problem of my testing though.Could it be an issue on AMD's side?
this issue is still a problem
it only occurs when using HiP-RT
my hardware is
AMD Ryzen 5980HX
AMD Radeon 6800M
I'm using blender 4.0.2 with the latest AMD driver 23.12.1
edit:checked this issue is also on 3.6 builds
as a workaround for now i have to make an object outside the collection groups and it no longer crashes after that
Edit 2: just adding to my workaround to prevent the bug i have a single 0.01mm tirangle when i render with hiprt in my scene at 0,0,0 with selectablity turned off outside of all sub collection in the scene collection the triangle is not assigned a material is only there to prevent the "crash"
here are logs as advised above to the other user
these were generated using the RC 4.0.3 build
its also an issue on 4.1.0 build
cc @BrianSavery
CC-ing @salipour who is taking over for AMD.
Okay. BTW @Alaska can you confirm? you've HIP-RT compatible GPU IIRC? 🙂
I can confirm this issue in Blender 3.6.8, 4.0.2 and these versions of Blender 4.1 and 4.2:
4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-02-19 21:26, hash:
42a74a28f212
4.2.0 Alpha, branch: main, commit date: 2024-02-20 00:21, hash:
7ed02da2bef4
System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: AMD Radeon RX 7800 XT ATI Technologies Inc. 4.6.0 Core Profile Context 24.1.1.240110
Thanks. We're raising priority of crash reports which are easy to run into.
@salipour, any chance to have this fix for 4.1, planned for 3 weeks from now?
Not sure if it's an issue in HIP-RT or Cycles code. But either way, I guess it's possible to not create and try to intersect a BVH at all if the scene is empty, if somehow the BVH code can't easily work without any objects.
The fix for this is in our latest HIP-RT SDK. I can open a pull request with updated API and changes that make Cycles compatible with HIP-RT version 2.2. Here is the change list.
In order for version 2.2 to work, AMD needs to add new shader binaries to the driver and a driver update is necessary for users. The change on the app side is relatively harmless but will break HIP-RT on older drivers.
Alternatively, I can add a check inside the bvh builder to check if a scene is empty and return the call without invoking HIP-RT.
I think for Blender 4.1 it's better to add a check in the BVH builder.
For the driver update, does that mean it we would require ROCm 6 in general for HIP and HIP-RT?
The driver will continue to support both ROCm 6 and pre ROCm 6 for a while and Cycles functionality will not break with driver updates.