1. Fix for Cycles Crash on deleting/hiding all mesh objects with HIP RT (#112983) 2. Update for hip path to also include ROCm 6 driver

# Conflicts:
#	intern/cycles/device/hiprt/device_impl.cpp